--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#1f1f1f",
-  "background_color": "#347b98"
+  "theme_color": "#347b98",
+  "background_color": "#1f1f1f"
 }
